--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
-  "name": "eth-provider-front",
+  "name": "@dongwu/eth-provider-front",
   "version": "0.1.0",
-  "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.2.0",
@@ -19,7 +18,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "publish:npm": "rm -rf dist && mkdir dist && babel src/lib -d dist --copy-files"
   },
   "eslintConfig": {
     "extends": [
@@ -43,5 +43,20 @@
     "typescript": "^4.6.4",
     "@babel/cli": "^7.17.10",
     "@babel/preset-react": "^7.17.12"
-  }
+  },
+  "description": "Test",
+  "main": "index.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/dongwu-kim/eth-provider-front.git"
+  },
+  "keywords": [
+    "web3-ethereum-provider"
+  ],
+  "author": "dongwu-kim",
+  "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/dongwu-kim/eth-provider-front/issues"
+  },
+  "homepage": "https://github.com/dongwu-kim/eth-provider-front#readme"
 }
