--- a/package.json
+++ b/package.json
@@ -1,6 +1,15 @@
 {
-  "name": "@dongwu/eth-provider-front",
+  "name": "@dongwu-kim/eth-provider-front",
   "version": "0.1.0",
+  "types": "./lib/index.d.ts",
+  "publishConfig": {
+    "access": "public"
+  },
+  "babel": {
+    "presets": [
+      "@babel/preset-react"
+    ]
+  },
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.2.0",
@@ -9,6 +18,7 @@
     "@types/node": "^16.11.36",
     "@types/react": "^18.0.9",
     "@types/react-dom": "^18.0.4",
+    "pluralize": "^8.0.0",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-scripts": "5.0.1",
@@ -16,10 +26,10 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "tsc",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "publish:npm": "rm -rf dist && mkdir dist && babel src/lib -d dist --copy-files"
+    "publish:npm": "yarn build && rm -rf dist && mkdir dist && babel src/lib -d dist --copy-files"
   },
   "eslintConfig": {
     "extends": [
@@ -40,9 +50,10 @@
     ]
   },
   "devDependencies": {
-    "typescript": "^4.6.4",
     "@babel/cli": "^7.17.10",
-    "@babel/preset-react": "^7.17.12"
+    "@babel/preset-react": "^7.17.12",
+    "@types/pluralize": "^0.0.29",
+    "typescript": "^4.6.4"
   },
   "description": "Test",
   "main": "index.js",
