--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@dongwu-kim/eth-provider-front",
-  "version": "0.1.4",
+  "version": "0.1.5",
   "types": "./dist/index.d.ts",
   "publishConfig": {
     "access": "public"
@@ -22,7 +22,8 @@
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "typescript": "^4.6.4"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -52,8 +53,7 @@
   "devDependencies": {
     "@babel/cli": "^7.17.10",
     "@babel/preset-react": "^7.17.12",
-    "@types/pluralize": "^0.0.29",
-    "typescript": "^4.6.4"
+    "@types/pluralize": "^0.0.29"
   },
   "description": "Test",
   "main": "index.js",
